[package]
name = "sprinkles"
version = "1.0.0"
edition = "2021"
authors = ["Khalil Ouali"]
license = "MIT"
repository = "https://github.com/KhalilOuali/sprinkles"
description = "Randomly colors input text and outputs it to the terminal."
keywords = ["cli", "text", "pretty-print", "format"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.3.15", features = ["derive"] }
rand = "0.8.5"
termcolor = "1.2.0"
